--- a/app/src/main/res/layout/completed_match_list.xml
+++ b/app/src/main/res/layout/completed_match_list.xml
@@ -16,6 +16,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
         android:clickable="true"
+        android:foreground="?selectableItemBackground"
         app:cardCornerRadius="6dp"
         tools:ignore="MissingConstraints">
 
@@ -116,10 +117,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:gravity="center"
                 android:layout_gravity="center"
-                android:drawableRight="@drawable/ic_green_small_ball"/>
+                android:layout_weight="3"
+                android:drawableRight="@drawable/ic_green_small_ball"
+                android:gravity="center" />
 
             <TextView
                 android:id="@+id/leftTime"
