--- a/app/src/main/res/layout/contest_list.xml
+++ b/app/src/main/res/layout/contest_list.xml
@@ -14,6 +14,8 @@
         android:layout_marginTop="5dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="5dp"
+        android:clickable="true"
+        android:foreground="?selectableItemBackground"
         app:cardCornerRadius="6dp"
         tools:ignore="MissingConstraints">
 
