--- a/app/src/main/res/layout/joincontest_matches_list.xml
+++ b/app/src/main/res/layout/joincontest_matches_list.xml
@@ -16,6 +16,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
         android:clickable="true"
+        android:foreground="?selectableItemBackground"
         app:cardCornerRadius="6dp"
         tools:ignore="MissingConstraints">
 
@@ -139,8 +140,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_weight="3"
                 android:layout_marginStart="5dp"
+                android:layout_weight="3"
                 android:gravity="left"
                 android:textColor="@color/red"
                 android:textSize="10sp"
@@ -175,8 +176,8 @@
             android:layout_marginTop="120dp"
             android:background="#57DBDBDB"
             android:orientation="horizontal"
-            android:visibility="gone"
             android:padding="5dp"
+            android:visibility="gone"
             android:weightSum="10">
 
             <TextView
