--- a/app/src/main/res/layout/leaderboard_user_ranking_list.xml
+++ b/app/src/main/res/layout/leaderboard_user_ranking_list.xml
@@ -11,6 +11,8 @@
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:background="@drawable/border_list_price"
+        android:clickable="true"
+        android:foreground="?selectableItemBackground"
         android:orientation="vertical">
 
         <LinearLayout
@@ -52,10 +54,10 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/userName"
                     android:gravity="left"
-                    android:visibility="gone"
                     android:paddingStart="5dp"
                     android:text="You Won 25"
-                    android:textColor="@color/green" />
+                    android:textColor="@color/green"
+                    android:visibility="gone" />
 
             </RelativeLayout>
 
