--- a/app/src/main/res/layout/live_my_created_team_list.xml
+++ b/app/src/main/res/layout/live_my_created_team_list.xml
@@ -11,6 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="160dp"
         android:layout_margin="12dp"
+        android:clickable="true"
+        android:foreground="?selectableItemBackground"
         app:cardCornerRadius="8dp"
         tools:ignore="MissingConstraints">
 
