--- a/app/src/main/res/layout/winning_list.xml
+++ b/app/src/main/res/layout/winning_list.xml
@@ -32,16 +32,17 @@
             <View
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="6" />
+                android:layout_weight="5.5" />
 
             <TextView
                 android:id="@+id/price"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_weight="1"
+                android:layout_weight="1.5"
                 android:drawableLeft="@drawable/ic_baseline_currency_rupee_22"
                 android:gravity="center"
+                android:textSize="13sp"
                 android:textColor="@color/black" />
 
             <View
