--- a/app/src/main/res/menu/navigation_drawer.xml
+++ b/app/src/main/res/menu/navigation_drawer.xml
@@ -13,6 +13,7 @@
 
     <item
         android:id="@+id/search"
+        android:visible="false"
         android:icon="@drawable/ic_baseline_search_24"
         android:title="Find People" />
 
