my_join_contest_list.xml

--- a/app/src/main/res/layout/my_join_contest_list.xml
+++ b/app/src/main/res/layout/my_join_contest_list.xml
@@ -47,7 +47,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight=".5"
+                android:clickable="true"
                 android:drawableLeft="@drawable/ic_baseline_share_light_blue"
+                android:foreground="?selectableItemBackground"
                 android:gravity="center"
                 android:textColor="@color/black"
                 android:textSize="12sp"
